--- a/configuration.properties
+++ b/configuration.properties
@@ -1,9 +1,6 @@
 browser=chrome
+env = https://web-table-2.cydeo.com/login
 
-vyTrackUrl=https://qa3.vytrack.com
-driver_username=user1
-driver_password=UserUser123
-sales_manager_username=salesmanager101
-sales_manager_password=UserUser123
-store_manager_username=storemanager51
-store_manager_password=UserUser123
+username = Test
+password = Tester
+
